--- a/Employee_Performance_for_Hr_Analytics.ipynb
+++ b/Employee_Performance_for_Hr_Analytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPntolelZkEDP7C8sj5hQ4G",
+      "authorship_tag": "ABX9TyPpAUiGVs8uOpD+/dYO+Jte",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -837,7 +837,7 @@
     {
       "cell_type": "code",
       "source": [
-        "HR=HR[pd.to_numeric(HR['previous_year_rating'], errors='coerce').notnull()]\n",
+        "# HR=HR[pd.to_numeric(HR['previous_year_rating'], errors='coerce').notnull()]\n",
         "HR.shape"
       ],
       "metadata": {
