--- a/Employee_Performance_for_Hr_Analytics.ipynb
+++ b/Employee_Performance_for_Hr_Analytics.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
         },
         "id": "28zPscIvyVPi",
-        "outputId": "73ecdf79-d4f7-47a8-f50e-d3759e8fa0c4"
+        "outputId": "8976e102-b813-4ed8-8e31-f962885cefe1"
       },
       "outputs": [
         {
@@ -55,9 +55,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-9de44829-fc47-4d24-826d-290abd8a50c2\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-cd558513-d425-4d2d-aa16-b4a5c7c174a6\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-9de44829-fc47-4d24-826d-290abd8a50c2\">\n",
+              "     <output id=\"result-cd558513-d425-4d2d-aa16-b4a5c7c174a6\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -245,7 +245,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving Uncleaned_employees_final_dataset.csv to Uncleaned_employees_final_dataset (1).csv\n"
+            "Saving Uncleaned_employees_final_dataset.csv to Uncleaned_employees_final_dataset.csv\n"
           ]
         }
       ],
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "bRlZRe_WzcSh"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "rbCdFtYyzi1O"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -290,9 +290,9 @@
           "height": 505
         },
         "id": "dZXJh0FdzvOh",
-        "outputId": "d26f5e3c-79db-498a-ed73-349f58bc528b"
+        "outputId": "a61fe154-4fe5-484d-8be3-e809c01d81e1"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,7 +354,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d3481314-188b-42d3-9d9b-999a43415b26\">\n",
+              "  <div id=\"df-70e9727e-3369-4333-81e3-ac014663eb30\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -570,7 +570,7 @@
               "</table>\n",
               "<p>17417 rows × 13 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3481314-188b-42d3-9d9b-999a43415b26')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-70e9727e-3369-4333-81e3-ac014663eb30')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -621,12 +621,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d3481314-188b-42d3-9d9b-999a43415b26 button.colab-df-convert');\n",
+              "          document.querySelector('#df-70e9727e-3369-4333-81e3-ac014663eb30 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d3481314-188b-42d3-9d9b-999a43415b26');\n",
+              "          const element = document.querySelector('#df-70e9727e-3369-4333-81e3-ac014663eb30');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -649,7 +649,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -670,7 +670,7 @@
       "metadata": {
         "id": "G_GrbP370Eak"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -683,9 +683,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GC-C_Gzk0Raj",
-        "outputId": "a9415bb9-e275-47e7-e87e-949473fc5c2f"
+        "outputId": "7f142cec-89cf-4bcc-c16c-29673b8f4e5d"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,7 +695,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 7
         }
       ]
     },
@@ -729,9 +729,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N1TqD-Uf7Yu0",
-        "outputId": "68436d2d-0d2c-41d4-a199-95aead5f9269"
+        "outputId": "3481a35d-a6b1-49a3-e290-588b08e4af9c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,9 +794,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CRLMKNM6-G9P",
-        "outputId": "a2ff308c-dbe1-4fb5-c4ae-213ab2d9e268"
+        "outputId": "15868393-e913-4a10-bc9e-ac7255ab9f1a"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,15 +845,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0l53ODvzAbgn",
-        "outputId": "c994c8ba-3485-49e5-ea86-33ee024de8e9"
+        "outputId": "e5fb4e8c-2c8d-4af4-d4f6-54a355e5a5fe"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(16052, 13)"
+              "(17415, 13)"
             ]
           },
           "metadata": {},
@@ -882,7 +882,7 @@
       "metadata": {
         "id": "m20LctpbC7wQ"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -899,9 +899,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
-        "outputId": "6ee23507-f48f-480c-a397-99efea19dbb4"
+        "outputId": "c3f6de3a-c8d5-443c-83a0-b5cae3792b86"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -962,7 +962,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_b4e4cef7-f61a-4ac1-a4a4-5e2259814732\", \"employees_cleaned.csv\", 1158669)"
+              "download(\"download_cf9d1998-6bdf-41d2-b158-01c2aa01ce97\", \"employees_cleaned.csv\", 1158669)"
             ]
           },
           "metadata": {}
