--- a/Employee_Performance_for_Hr_Analytics.ipynb
+++ b/Employee_Performance_for_Hr_Analytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpAUiGVs8uOpD+/dYO+Jte",
+      "authorship_tag": "ABX9TyPBfAY1oQQI7us+nvAILVij",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -826,9 +826,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Only 'previous_year_rating' column has some non-numeric values. \n",
-        "Removing rows for which numeric columns are having irrelevant data type values.\n",
-        "If 'coerce', then invalid parsing will be set as NaN. We then filter out Null values."
+        "Update: Keeping all null values as the column 'previous_year_rating' can have null values. removing these null rows may lead to data loss.\n",
+        "\n",
+        " <Only 'previous_year_rating' column has some non-numeric values. \n",
+        "Removing rows for which numeric columns are having irrelevant data type values.If 'coerce', then invalid parsing will be set as NaN. We then filter out Null values.>"
       ],
       "metadata": {
         "id": "E-Sm1FE2AQdT"
